--- a/ascoltarecrescere.html
+++ b/ascoltarecrescere.html
@@ -65,8 +65,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="section-heading center">Ascoltare per crescere</h2>
-                        <h2 class="section-heading text-uppercase center"></h2>
+                        <h1 class="section-heading center">Ascoltare per crescere</h1>
                     </div>
                 </div>
             </div>
@@ -79,7 +78,7 @@
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
-                    <p class="testi"><h3 class="section-heading" >Laboratori di suoni, musica e movimento.</h3></p>
+                    <h2 class="section-heading" >Laboratori di suoni, musica e movimento.</h2>
                     <p class="testi">
                     Il laboratorio per piccoli e piccolissimi punta a  sviluppare le naturali potenzialità innate del bambino,  fin dalla più tenera età.<br> 
                     Tutto parte dall’ascolto, che  verrà usato come canale preferenziale con il bambino  per instaurare una comunicazione musicale. <br>
@@ -104,7 +103,7 @@
                 <div class="col-md-4">chiocciolesonore@gmail.com</div>
                 <div class="col-md-4">
                     <p>
-                      <a href=""><img src="img/fb.png" alt=""></a>
+                      <a href="https://www.facebook.com/chiocciolesonore/"><img src="img/fb.png" alt=""></a>
                      <a href="https://instagram.com/chiocciolesonore_?utm_medium=copy_link"><img src="img/in.png" alt=""></a>
                     </p>
                      <p><a href="newsletter.html">Newsletter</a></p>
