--- a/ascolto.html
+++ b/ascolto.html
@@ -65,8 +65,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <h2 class="section-heading center">Ascolto e mindfulness</h2>
-            <h2 class="section-heading text-uppercase"></h2>
+            <h1 class="section-heading center">Ascolto e mindfulness</h1>
           </div>
         </div>
       </div>
@@ -79,7 +78,7 @@
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-          <p class="testi"> <h3 class="section-heading"> Ascolta chi sei</h3></p>
+          <h2 class="section-heading"> Ascolta chi sei</h2>
           <p class="testi">La mindfulness è una tecnica che si basa sulla pratica dell’attenzione
             consapevole, utile per ridurre lo stress e la sofferenza psicologica, per
             migliorare la comunicazione, aumentare l’attenzione e facilitare le
@@ -108,7 +107,7 @@
           <p class="testi">Detto così potrebbe sembrare molto complicato: in verità è molto
             semplice da mettere in azione, e richiede poco tempo per la pratica
             giornaliera.</p>
-          <p class="testi"><h3 class="section-heading">Ascolto e mindfulness per bambini</h3></p>
+          <h2 class="section-heading">Ascolto e mindfulness per bambini</h2>
           <p class="testi">Anche i bambini possono allenarsi a riconoscere meglio le proprie
             emozioni e a migliorare la capacità di ascoltare ed essere presenti. I
             bambini, quando rivolgono l’attenzione verso di loro <b>scoprono le
@@ -138,7 +137,7 @@
             formate alla mindfulness e con esperienza nell’ambito dell’infanzia,
             anche i piccoli possano trarre beneficio dall’allenarsi all’essere presenti
             e dall’osservazione delle proprie esperienze.</p>
-          <p class="testi"><h3 class="section-heading">Tempi</h3></p>
+          <h2 class="section-heading">Tempi</h2>
             <p class="testi">Ascolto e mindfulness è un percorso che si svolge in gruppo, una volta a
               settimana, per 8 settimane che è il tempo necessario per completare il
               protocollo.</p>
@@ -163,7 +162,7 @@
         <div class="col-md-4">chiocciolesonore@gmail.com</div>
         <div class="col-md-4">
           <p>
-            <a href=""><img src="img/fb.png" alt=""></a>
+            <a href="https://www.facebook.com/chiocciolesonore/"><img src="img/fb.png" alt=""></a>
            <a href="https://instagram.com/chiocciolesonore_?utm_medium=copy_link"><img src="img/in.png" alt=""></a>
           </p>
            <p><a href="newsletter.html">Newsletter</a></p>
