--- a/grembosonoro.html
+++ b/grembosonoro.html
@@ -65,8 +65,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <h2 class="section-heading center">Grembo sonoro</h2>
-            <h2 class="section-heading text-uppercase center"><h2>
+            <h1 class="section-heading center">Grembo sonoro</h1>
           </div>
         </div>
       </div>
@@ -78,7 +77,7 @@
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8 text-center">
-          <h3 class="section-heading">Un oceano di suoni dentro la tua pancia</h3>
+          <h2 class="section-heading">Un oceano di suoni dentro la tua pancia</h2>
           <p class="testi">Nel grembo di ogni mamma in attesa c’è una creatura immersa in un
             universo sonoro e ritmico. Il piccolo ascolta la voce della mamma e
             percepisce le sue emozioni già dal 5° mese di gestazione. La voce, il
@@ -91,7 +90,7 @@
             precoce al benessere di tuo figlio. Per te che hai disturbi del sonno, mal
             di schiena, cattivo umore; per te che vuoi concederti un momento di
             coccola, condividere emozioni, imparare.</p>
-            <h3 class="section-heading">Cos’è e come funziona <i>Grembo Sonoro</i></h3>
+            <h2 class="section-heading">Cos’è e come funziona <i>Grembo Sonoro</i></h2>
             <p class="testi">Grembo Sonoro è un percorso individuale o di gruppo che si fonda sul
               Metodo Tomatis.</p>
             <p class="testi">Tramite cuffie speciali, ti guido all'ascolto di Mozart e di Canti
@@ -100,7 +99,7 @@
                 dell'umore, diminuirà l'ansia.</b> Fiduciosa, serena, carica di energia
               affronterai la gravidanza e il parto con gioia e positività. Il bambino si
               aprirà al mondo con il desiderio di esplorarlo e di comunicare.</p>
-              <h3 class="section-heading">I benefici di questo percorso</h3>
+              <h2 class="section-heading">I benefici di questo percorso</h2>
               <p class="testi">Gli effetti positivi dell’ascolto sulla donna in attesa riguardano molti
                 aspetti, in particolare:</p>
                 <p> 
@@ -122,7 +121,7 @@
               <p class="testi"><b>Trasmetti la tua serenità al tuo bambino</b> sia in utero che una volta
                 nato: questo tuo stato d’animo incoraggerà in lui o in lei la gioia, la
                 voglia di crescere, di esplorare l’ambiente.</p>
-                <h3 class="section-heading">Tempi</h3>
+                <h2 class="section-heading">Tempi</h2>
               <p class="testi">Quando inizia il corso propongo un colloquio individuale e in alcuni casi
                 un test d’ascolto.</p>
               <p class="testi">Le sedute sono individuali o per gruppi di 4/6 donne a partire dal 5°
@@ -150,7 +149,7 @@
         <div class="col-md-4">chiocciolesonore@gmail.com</div>
         <div class="col-md-4">
           <p>
-            <a href=""><img src="img/fb.png" alt=""></a>
+            <a href="https://www.facebook.com/chiocciolesonore/"><img src="img/fb.png" alt=""></a>
            <a href="https://instagram.com/chiocciolesonore_?utm_medium=copy_link"><img src="img/in.png" alt=""></a>
           </p>
            <p><a href="newsletter.html">Newsletter</a></p>
