--- a/incantabimbi.html
+++ b/incantabimbi.html
@@ -61,8 +61,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="section-heading center">InCantabimbi</h2>
-                    <h2 class="section-heading text-uppercase center"></h2>
+                    <h1 class="section-heading center">InCantabimbi</h1>
                 </div>
             </div>
         </div>
@@ -76,7 +75,7 @@
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8">
-              <p class="testi"><h3 class="section-heading">PRESENTAZIONE</h3></p>
+              <h2 class="section-heading">PRESENTAZIONE</h2>
               <p class="testi">Incantabimbi é un gruppo di musiciste professioniste, poliedriche, specializzate nell’ educazione musicale della prima infanzia. Il gruppo nasce con l’obiettivo di avvicinare al linguaggio musicale dell’Opera Lirica ma più in generale, alla musica nei suoi differenti generi, stili e modi, attraverso l’elaborazione e la creazione di spettacoli coinvolgenti e interattivi rivolti ai bambini dagli 0 ai 6 anni e alle loro famiglie.
                 Le componenti del gruppo sono cinque e sono musiciste professioniste polistrumentiste, cantanti di diversi stili e generi musicali, specializzate nell’ educazione musicale per la prima infanzia.
                 La peculiarità del gruppo sta nell’elaborare e restituire, secondo le esigenze evolutive dei bambini, un progetto finale duttile ed adattabile al pubblico e agli spazi.<br>
@@ -107,7 +106,7 @@
       <div class="col-md-4">chiocciolesonore@gmail.com</div>
       <div class="col-md-4">
        <p>
-         <a href=""><img src="img/fb.png" alt=""></a>
+         <a href="https://www.facebook.com/chiocciolesonore/"><img src="img/fb.png" alt=""></a>
         <a href="https://instagram.com/chiocciolesonore_?utm_medium=copy_link"><img src="img/in.png" alt=""></a>
        </p>
         <p><a href="newsletter.html">Newsletter</a></p>
