--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <title>Chioccciole Sonore</title>
   <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
   <!-- Font Awesome icons (free version)-->
@@ -63,8 +63,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <h2 class="section-heading center">Sei nel posto giusto, sei a casa</h2>
-            <h2 class="section-heading text-uppercase center"></h2>
+            <h1 class="section-heading center">Sei nel posto giusto, sei a casa</h1>
           </div>
         </div>
       </div>
@@ -73,7 +72,7 @@
 
  <!-- <hr>-->
 
-  <section class="" id="contenuti">
+  <section class="page-section" id="contenuti">
     <div class="container">
       <div class="row">
         <div class="col-md-2 testi"></div>
@@ -96,7 +95,7 @@
             <p class="testi">
             Possiamo aiutare anche te: conosciamoci meglio (<a href="about.html">Chi siamo</a>),
             i nostri progetti (<a href="natiperlamusica.html">Nati per la Musica</a>), 
-            <a href="metodotomatis.html">metodica Tomatis</a> e <a href="bimbincanto.html">Incantabimbi.</a> </p>
+            <a href="metodotomatis.html">metodica Tomatis</a> e <a href="incantabimbi.html">Incantabimbi.</a> </p>
           </p>
         </div>
         <div class="col-md-2 testi"></div>
@@ -114,7 +113,7 @@
         <div class="col-md-4">chiocciolesonore@gmail.com</div>
         <div class="col-md-4">
           <p>
-           <a href=""><img src="img/fb.png" alt=""></a>
+           <a href="https://www.facebook.com/chiocciolesonore/"><img src="img/fb.png" alt=""></a>
            <a href="https://instagram.com/chiocciolesonore_?utm_medium=copy_link"><img src="img/in.png" alt=""></a>
           </p>
            <p><a href="newsletter.html">Newsletter</a></p>
