--- a/natiperlamusica.html
+++ b/natiperlamusica.html
@@ -61,8 +61,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="section-heading center">Nati per la musica</h2>
-                    <h2 class="section-heading text-uppercase center"></h2>
+                    <h1 class="section-heading center">Nati per la musica</h1>
                 </div>
             </div>
         </div>
@@ -75,20 +74,14 @@
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8">
-              <p class="testi">
-                <h3 class="section-heading">Insieme per NATI PER LA MUSICA</h3><br>
-              </p>
+                <h2 class="section-heading">Insieme per NATI PER LA MUSICA</h2>
                 <p class="testi">Nati per la Musica promuove l'esperienza musicale in famiglia come strumento di relazione, già durante la gravidanza, per uno sviluppo migliore del bambino nelle prime epoche della vita.</p>
                 <p class="testi">Il Programma è promosso dall'Associazione Culturale Pediatri e dal Centro per la Salute del Bambino ed è attivo su tutto il territorio nazionale grazie alle reti regionali di operatori, che coordinano e promuovono diverse iniziative locali per bambini in età prescolare e le loro famiglie.</p>
-                <p class="testi">
-                  <h3 class="section-heading">La musica fa bene</h3>
-                </p>
+                  <h2 class="section-heading">La musica fa bene</h2>
                 <p class="testi">Le ricerche scientifiche dimostrano che le esperienze nei primi anni di vita sono fondamentali per un ottimale sviluppo complessivo delle bambine e dei bambini. La musica è una buona pratica che, se attuata precocemente e con continuità, sostiene la crescita dei bambini.</p>
                 <p class="testi">Dal punto di vista cognitivo, la musica aiuta il bambino a sviluppare proprie capacità di ascolto e osservazione, ad accrescere la propria immaginazione e creatività, ad aumentare le capacità di concentrazione e attenzione e ad esercitare la memoria.</p>
                 <p class="testi">A livello relazionale ascoltare e fare musica in famiglia, giocando con la voce, con gli oggetti quotidiani che producono suoni, cantare filastrocche e inventarne di nuove rafforza il legame affettivo tra adulto e bambino ed è fonte di benessere.</p>
-                <p class="testi">
-                  <h3 class="section-heading">Fare musica, insieme</h3>
-                </p>
+                  <h2 class="section-heading">Fare musica, insieme</h2>
                 <p class="testi">Il ruolo dei genitori è cruciale nel percorso di avvicinamento e scoperta della musica e dei suoni.</p>
                 <p class="testi">Un ambiente familiare musicalmente stimolante, dove i genitori propongono ai bambini di giocare con la voce e con i suoni, rafforza il legame affettivo all’interno della famiglia ed è terreno favorevole nel quale si possono sviluppare le esperienze musicali successive.<br>
                   I <b>Laboratori accreditati da nati per la Musica</b>: Ascoltare per crescere, Grembo sonoro e Storie di suoni.</p>
@@ -110,7 +103,7 @@
      <div class="col-md-4">chiocciolesonore@gmail.com</div>
      <div class="col-md-4">
         <p>
-          <a href=""><img src="img/fb.png" alt=""></a>
+          <a href="https://www.facebook.com/chiocciolesonore/"><img src="img/fb.png" alt=""></a>
          <a href="https://instagram.com/chiocciolesonore_?utm_medium=copy_link"><img src="img/in.png" alt=""></a>
         </p>
          <p><a href="newsletter.html">Newsletter</a></p>
