--- a/newsletter.html
+++ b/newsletter.html
@@ -61,8 +61,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="section-heading center">Newsletter</h2>
-                    <h2 class="section-heading text-uppercase center"></h2>
+                    <h1 class="section-heading center">Newsletter</h1>
                 </div>
             </div>
         </div>
@@ -86,26 +85,26 @@
                     <div class="row align-items-stretch mb-5">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name." />
+                                <input class="form-control" id="name" type="text" placeholder="Il tuo nome" required="required" data-validation-required-message="Please enter your name." />
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <input class="form-control" id="name" type="text" placeholder="Your Surname *" required="required" data-validation-required-message="Please enter your surname." />
+                                <input class="form-control" id="name" type="text" placeholder="Il tuo cognome" required="required" data-validation-required-message="Please enter your surname." />
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <input class="form-control" id="email" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address." />
+                                <input class="form-control" id="email" type="email" placeholder="La tua email" required="required" data-validation-required-message="Please enter your email address." />
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <p> 
+                            <p class="testi"> 
                                 <input type="checkbox" id="authData" name="authData" value="1" aria-invalid="false"  onclick="terms_changed(this)"> <label for="authData"> Ho letto e approvo l'informativa sulla <a href="">privacy</a></label><br>
                             </p>
                         </div>
@@ -133,7 +132,7 @@
      <div class="col-md-4">chiocciolesonore@gmail.com</div>
      <div class="col-md-4">
         <p>
-          <a href=""><img src="img/fb.png" alt=""></a>
+          <a href="https://www.facebook.com/chiocciolesonore/"><img src="img/fb.png" alt=""></a>
          <a href="https://instagram.com/chiocciolesonore_?utm_medium=copy_link"><img src="img/in.png" alt=""></a>
         </p>
          <p><a href="newsletter.html">Newsletter</a></p>
