--- a/storiesuoni.html
+++ b/storiesuoni.html
@@ -66,8 +66,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <h2 class="section-heading center">Storie di suoni</h2>
-            <h2 class="section-heading text-uppercase"></h2>
+            <h1 class="section-heading center">Storie di suoni</h1>
           </div>
         </div>
       </div>
@@ -80,7 +79,7 @@
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-          <h3 class="section-heading">Basta una storia ed ecco qua! Un nuovo mondo</h3>
+          <h2 class="section-heading">Basta una storia ed ecco qua! Un nuovo mondo</h2>
           <p class="testi">Da sempre e in tutte le culture narrare fiabe, storie e leggende ha un
             fascino e un’importanza per chi è presente e per la società tutta.
             Parola, corpo, suono aiutano a entrare in un mondo dove tutto è
@@ -125,7 +124,7 @@
         <div class="col-md-4">chiocciolesonore@gmail.com</div>
         <div class="col-md-4">
           <p>
-            <a href=""><img src="img/fb.png" alt=""></a>
+            <a href="https://www.facebook.com/chiocciolesonore/"><img src="img/fb.png" alt=""></a>
            <a href="https://instagram.com/chiocciolesonore_?utm_medium=copy_link"><img src="img/in.png" alt=""></a>
           </p>
            <p><a href="newsletter.html">Newsletter</a></p>
