--- a/tomatisbambini.html
+++ b/tomatisbambini.html
@@ -17,15 +17,15 @@
  </head>
 
  <body id="page-top">
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-inn fixed-top" id="mainNav">
    <div class="container">
-    <a class="navbar-brand js-scroll-trigger" href="index.html" alt=""></a>
+    <a class="navbar-brand js-scroll-trigger" href="index.html" ><img src="img/logo.png"></a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
      Menu
      <i class="fas fa-bars ml-1"></i>
     </button>
   </button>
-  <div class="collapse navbar-collapse" id="navbarResponsive">
+  <div class="collapse navbar-collapse li" id="navbarResponsive">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item"><a class="nav-link js-scroll-trigger" href="about.html">Chi Siamo</a></li>
       <li class="nav-item dropdown">
@@ -62,8 +62,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-              <h2 class="section-heading center">Tomatis per bambini</h2>
-              <h2 class="section-heading text-uppercase"></h2>
+              <h1 class="section-heading center">Tomatis per bambini</h1>
     </div>
   </div>
  </div>    
@@ -78,12 +77,8 @@
    <div class="container">
     <div class="row">
      <div class="col-md-2"></div>
-  <!--    <div class="embed-responsive embed-responsive-16by9">
-       <iframe width="560" height="315" src="https://www.youtube.com/embed/uM6kz8jUMDI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>  --> 
      <div class="col-md-8">
-       <h3 class="section-heading">Dirige le orecchie... il maestro Wolfgang Amadeus Mozart</h3>
-     <!-- <iframe class="media" src="https://www.youtube.com/embed/uM6kz8jUMDI" allowfullscreen></iframe>--> 
+       <h2 class="section-heading">Dirige le orecchie... il maestro Wolfgang Amadeus Mozart</h2>
       <p class="testi">Ascoltare non è solo udire ma ricevere un messaggio, elaborarlo, integrarlo e dare una risposta adeguata.</p>
       <p class="testi">Forse non lo sai ma dal nostro ascolto dipende la capacità di attenzione, l’efficacia con cui trattiamo un’informazione, la nostra postura, la voglia di apprendere e di comunicare.</p>
       <p class="testi">La <a href="metodotomatis.html">metodica Tomatis</a> è una tecnica di stimolazione sonora che serve a migliorare la qualità di ricezione dell’orecchio.</p>
@@ -93,7 +88,7 @@
     </div>
     <div class="row">
      <div class="col-md-2"></div>
-     <div class="col-md-8"><h3 class="section-heading"> Cos’è <i>Tomatis</i> per bambini</h3>
+     <div class="col-md-8"><h2 class="section-heading"> Cos’è <i>Tomatis</i> per bambini</h2>
       <p class="testi">Un percorso rivolto ai bambini di età 0-6 anni ma pensato per le famiglie, in particolare per le mamme che desiderano <b>donare armonia ed equilibrio ai propri figli</b> durante le delicate fasi di crescita e soprattutto nei primi anni.</p>
       <p class="testi">Si tratta nella pratica di un trattamento speciale della musica di Mozart e della musica vocale a più voci attraverso uno strumento inventato da Tomatis che si chiama Orecchio Elettronico: un modo utile e testato per armonizzare gli aspetti del bambino necessari per una crescita e un apprendimento sereno a livello psicomotorio, emotivo, linguistico e attentivo.</p>
       <p class="testi">Il bambino non deve fare nessun sforzo: si dedicherà durante il nostro tempo insieme ad attività piacevoli, creative e naturalmente all’ascolto.</p>
@@ -105,13 +100,15 @@
     </div>
     <div class="row">
      <div class="col-md-2"></div>
-     <div class="col-md-8"><h3 class="section-heading">Tempi</h3>
+     <div class="col-md-8"><h2 class="section-heading">Tempi</h2>
       <p class="testi">Le sedute sono suddivise in cicli intensivi: ogni ciclo dura 10/12 giorni. Sono necessari due o tre cicli di solito: tra un ciclo e
        l’altro c’è una pausa di 5 settimane.</p>
       <p class="testi">CTA: Scrivimi per prenotare il tuo colloquio conoscitivo!
        form di contatto</p>
+       <iframe class="videoiframe" width="560" height="315" src="https://www.youtube.com/embed/uM6kz8jUMDI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
      </div>
      <div class="col-md-2"></div>
+     
     </div>
    </div>
   </section>
@@ -127,7 +124,7 @@
      <div class="col-md-4">chiocciolesonore@gmail.com</div>
      <div class="col-md-4">
       <p>
-        <a href=""><img src="img/fb.png" alt=""></a>
+        <a href="https://www.facebook.com/chiocciolesonore/"><img src="img/fb.png" alt=""></a>
        <a href="https://instagram.com/chiocciolesonore_?utm_medium=copy_link"><img src="img/in.png" alt=""></a>
       </p>
        <p><a href="newsletter.html">Newsletter</a></p>
