--- a/about.html
+++ b/about.html
@@ -74,8 +74,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <h2 class="section-heading center">Armonizza la tua vita. Ascoltala.</h2>
-            <h2 class="section-heading text-uppercase center"></h2>
+            <h1 class="section-heading center">Armonizza la tua vita. Ascoltala.</h1>
           </div>
         </div>
       </div>
@@ -112,7 +111,7 @@
         <div class="col-md-4">chiocciolesonore@gmail.com</div>
         <div class="col-md-4">
           <p>
-            <a href=""><img src="img/fb.png" alt=""></a>
+            <a href="https://www.facebook.com/chiocciolesonore/"><img src="img/fb.png" alt=""></a>
            <a href="https://instagram.com/chiocciolesonore_?utm_medium=copy_link"><img src="img/in.png" alt=""></a>
           </p>
            <p><a href="newsletter.html">Newsletter</a></p>
