--- a/contatti.html
+++ b/contatti.html
@@ -62,7 +62,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-        <h2 class="section-heading center"> Facciamo qualcosa di bello insieme?</h2> 
+        <h1 class="section-heading center"> Facciamo qualcosa di bello insieme?</h1> 
       </div>
      </div>
     </div>
@@ -87,21 +87,21 @@
        <div class="row align-items-stretch mb-5">
         <div class="col-md-6">
          <div class="form-group">
-          <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name." />
+          <input class="form-control" id="name" type="text" placeholder="Nome e Cognome" required="required" data-validation-required-message="Please enter your name." />
           <p class="help-block text-danger"></p>
          </div>
          <div class="form-group">
-          <input class="form-control" id="email" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address." />
+          <input class="form-control" id="email" type="email" placeholder="La tua email" required="required" data-validation-required-message="Please enter your email address." />
           <p class="help-block text-danger"></p>
          </div>
          <div class="form-group mb-md-0">
-          <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required="required" data-validation-required-message="Please enter your phone number." />
+          <input class="form-control" id="phone" type="tel" placeholder="Il tuo telefono" required="required" data-validation-required-message="Please enter your phone number." />
           <p class="help-block text-danger"></p>
          </div>
         </div>
       <div class="col-md-6">
          <div class="form-group form-group-textarea mb-md-0">
-          <textarea class="form-control" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
+          <textarea class="form-control" id="message" placeholder="Scrivi qui il tuo messaggio" required="required" data-validation-required-message="Please enter a message."></textarea>
           <p class="help-block text-danger"></p>
          </div>
         </div> 
@@ -137,7 +137,7 @@
      <div class="col-md-4">chiocciolesonore@gmail.com</div>
      <div class="col-md-4">
       <p>
-        <a href=""><img src="img/fb.png" alt=""></a>
+        <a href="https://www.facebook.com/chiocciolesonore/"><img src="img/fb.png" alt=""></a>
        <a href="https://instagram.com/chiocciolesonore_?utm_medium=copy_link"><img src="img/in.png" alt=""></a>
       </p>
        <p><a href="newsletter.html">Newsletter</a></p>
