--- a/metodotomatis.html
+++ b/metodotomatis.html
@@ -14,6 +14,7 @@
   <!-- Core theme CSS (includes Bootstrap)-->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
+  <!-- <link rel="stylesheet" href="css/mioStile.css"> -->
  </head>
 
  <body id="page-top">
@@ -62,8 +63,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <h2 class="section-heading center">Graziella e la Metodica Tomatis</h2>
-            <h2 class="section-heading text-uppercase center"></h2>
+            <h1 class="section-heading center">Graziella e la Metodica Tomatis</h1>
           </div>
      </div>
     </div>    
@@ -77,7 +77,7 @@
     <div class="row">
      <div class="col-md-2"></div>
      <div class="col-md-8">
-      <p class="testi"><h3 class="section-heading">Fai un giro nel tuo universo sonoro</h3></p>
+      <h2 class="section-heading">Fai un giro nel tuo universo sonoro</h2>
       <p class="testi">Ho incontrato la metodica Tomatis durante la mia prima gravidanza. Questo approccio mi ha profondamente cambiata.<br>
       Volevo creare una <b>migliore relazione con la vita che portavo in grembo</b> e si è rivelato un percorso di crescita incredibile che è diventato un credo sempre più forte, e nel tempo una professione. </p>
       <p class="testi">Faccio questo lavoro strano e un po’ difficile da pronunciare, <i>audio psico fonologa</i>, spinta dalla convinzione che esista in ogni persona la <b>possibilità di un cambiamento</b> per stare meglio e tirare fuori proprio il talento personale. </p>
@@ -86,11 +86,11 @@
       La musica di Mozart dinamizza il sistema nervoso, i canti vocali a più voci riequilibrano il sistema neurovegetativo.</p>
       <p class="testi">Modificando la dinamica dell'orecchio che riceve il suono, abbiamo un effetto immediato sulla sua recezione. Stimolando l'orecchio per una determinata quantità di tempo facciamo in modo che questo effetto rimanga integrato e si autoalimenti in modo che poi la persona sia autonoma.</p>
      <p class="testi">CTA: Tutto quello che possiamo fare insieme è qui (link servizi)</p>
-     <p class="testi"> <h3 class="section-heading">Tomatis e la teoria sull’udito</h3></p>
+      <h2 class="section-heading">Tomatis e la teoria sull’udito</h2>
      <p class="testi">Il dr. Alfred A. Tomatis ha scoperto che <b>l'orecchio e l'ascolto</b> sono centrali nei nostri percorsi di apprendimento e di crescita, nel nostro relazionarci e incontrarci.
      Un buon udito e una capacità di ascolto allenata non servono solo per apprezzare la musica, ma sono fondamentali per percepisce i suoni, la loro origine spaziale, gestire l’ascolto, controllare la fonazione e l'abilità musicale, comprendere i linguaggi.</p>
      <p class="testi">Queste funzioni possono essere alterate a causa di incidenti, malattie, traumi, cattive abitudini acustiche. Attraverso l'uso delle tecniche sviluppate dal dr. Tomatis (se non si tratta di un danno organico) è possibile ridare all'orecchio la sua efficienza. Quando ci sono delle disarmonie c’è un ascolto non equilibrato e quindi <b>difficoltà d’apprendimento, mancanza di motivazione, facile stancabilità, insicurezza.</b></p>   
-     <p class="testi"><h3 class="section-heading">Il metodo e il mio lavoro</h3></p>
+     <h2 class="section-heading">Il metodo e il mio lavoro</h2>
      <p class="testi">II metodo Tomatis è una <b>tecnica di stimolazione sonora</b> e un intervento pedagogico che migliora il funzionamento dell'orecchio.</p>
      <p class="testi">Al fine di aiutare l'orecchio umano a stabilire o ristabilire il suo pieno potenziale, il dr. Tomatis ha sviluppato un metodo di rieducazione all'ascolto che utilizza musiche elaborate da una speciale apparecchiatura chiamata Orecchio Elettronico.</p>
      <p class="testi">Propongo il suo metodo per aiutare le persone a <b>sviluppare la comunicazione verbale</b>, il desiderio di imparare, la consapevolezza della propria immagine corporea, il controllo audio vocale e quello motorio.</p>
@@ -119,7 +119,7 @@
      <div class="col-md-4">chiocciolesonore@gmail.com</div>
      <div class="col-md-4">
       <p>
-        <a href=""><img src="img/fb.png" alt=""></a>
+        <a href="https://www.facebook.com/chiocciolesonore/"><img src="img/fb.png" alt=""></a>
        <a href="https://instagram.com/chiocciolesonore_?utm_medium=copy_link"><img src="img/in.png" alt=""></a>
       </p>
        <p><a href="newsletter.html">Newsletter</a></p>
