--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <title>Chioccciole Sonore</title>
-  <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chiocciole sonore - Sito in manutenzione</title>
+  <!-- <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" /> -->
   <!-- Font Awesome icons (free version)-->
   <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
   <!-- Google fonts-->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-  <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet"
-    type="text/css" />
+  <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
   <!-- Core theme CSS (includes Bootstrap)-->
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -21,41 +20,13 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="index.html" alt=""><img src="img/logo.png"></a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-        aria-label="Toggle navigation">
-        Menu
-        <i class="fas fa-bars ml-1"></i>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="about.html">Chi Siamo</a></li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="tomatis.html" id="navbardrop" data-toggle="dropdown">Tomatis</a>
-            <div class="dropdown-menu">
-              <a class="dropdown-item js-scroll-trigger" href="metodotomatis.html">Metodica TOMATIS</a>
-              <a class="dropdown-item js-scroll-trigger" href="tomatisbambini.html">TOMATIS per bambini</a>
-            </div>
-          </li>
-          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="incantabimbi.html">InCantabimbi</a></li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Nati per la musica</a>
-            <div class="dropdown-menu">
-              <a class="dropdown-item js-scroll-trigger" href="natiperlamusica.html">Nati per la musica</a>
-              <a class="dropdown-item js-scroll-trigger" href="ascoltarecrescere.html">Ascoltare per crescere</a>
-              <a class="dropdown-item js-scroll-trigger" href="grembosonoro.html">Grembo sonoro</a>
-              <a class="dropdown-item js-scroll-trigger" href="storiesuoni.html">Storie di suoni</a>
-              <a class="dropdown-item js-scroll-trigger" href="ascolto.html">Ascolto e mindfulness</a>
-            </div>
-          </li>
-          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contatti.html">Contatti</a></li>
-        </ul>
-      </div>
+
+    <a class="navbar-brand js-scroll-trigger" alt=""><img src="img/logo.png"></a>
+    
     </div>
   </nav>
 
-  <header class="">
+ <header class="">
     <section class="page-section" id="intestazione">
       <div class="container">
         <div class="row">
@@ -63,78 +34,14 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <h1 class="section-heading center">Sei nel posto giusto, sei a casa</h1>
+            <h1 class="section-heading center">Sito in costruzione</h1>
           </div>
         </div>
       </div>
     </section>
-  </header> 
+  </header>
+  
 
- <!-- <hr>-->
-
-  <section class="page-section" id="contenuti">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-2 testi"></div>
-        <div class="col-md-8 testi">
-          <p class="testi">
-            Siamo Chiara e Graziella, due professioniste in ascolto della vita che parla .</p>
-            <p class="testi">
-            Passione, creatività e organizzazione sono le caratteristiche che più ci
-            legano.<br>
-            Ci occupiamo di educazione musicale, musicoterapia e formazione
-            creando dei percorsi che ti aiutano a vivere la musica in modo pratico,
-            creativo e consapevole.</p>
-            <p class="testi">
-            Offriamo delle possibilità non convenzionali di rieducazione e di
-            benessere alle persone che chiedono sostegno per la loro crescita.</p>
-            <p class="testi">
-            Perché non convenzionali? Perché usiamo <b>la musica, l’ascolto e le
-            potenzialità del nostro orecchio</b> per sviluppare una vita più serena e
-            ricca di possibilità.</p>
-            <p class="testi">
-            Possiamo aiutare anche te: conosciamoci meglio (<a href="about.html">Chi siamo</a>),
-            i nostri progetti (<a href="natiperlamusica.html">Nati per la Musica</a>), 
-            <a href="metodotomatis.html">metodica Tomatis</a> e <a href="incantabimbi.html">Incantabimbi.</a> </p>
-          </p>
-        </div>
-        <div class="col-md-2 testi"></div>
-      </div>
-    </div>
-  </section>
-  <hr>
-  <section class="footer" id="footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <p>© 2022 Chiocciole Sonore</p>
-          <p><a href="">Privacy Policy</a></p>
-        </div>
-        <div class="col-md-4">chiocciolesonore@gmail.com</div>
-        <div class="col-md-4">
-          <p>
-           <a href="https://www.facebook.com/chiocciolesonore/"><img src="img/fb.png" alt=""></a>
-           <a href="https://instagram.com/chiocciolesonore_?utm_medium=copy_link"><img src="img/in.png" alt=""></a>
-          </p>
-           <p><a href="newsletter.html">Newsletter</a></p>
-            <p><a href="contatti.html">Contatti</a></p>
-          </a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
-  <!--  //Script-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Third party plugin JS-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-  <!-- Contact form JS-->
-  <script src="assets/mail/jqBootstrapValidation.js"></script>
-  <script src="assets/mail/contact_me.js"></script>
-  <!-- Core theme JS-->
-  <script src="js/scripts.js"></script>
 </body>
 
 </html>
