--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <h1 class="section-heading center">Sito in costruzione</h1>
+            <h1 class="section-heading center">Sito in Manutenzione</h1>
           </div>
         </div>
       </div>
